--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a multi-line script
         run: |
+          cd Calculator
           dotnet run
-          ls Calculator/bin
+          ls bin
           tree
