--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -14,5 +14,12 @@ jobs:
         run: |
           cd Calculator
           dotnet build
-          ls bin
-          tree
+          git config user.name "Website Bot"
+          git config user.email "no-reply@lotes-lab.de"
+          git checkout -b website
+          git add --all
+          git rm -r ..
+          git commit -am "Update website"
+          git push --force origin website
+      
+          
