--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,7 +17,7 @@ jobs:
           git config user.name "Website Bot"
           git config user.email "no-reply@lotes-lab.de"
           git checkout -b website
-          git rm -r .. !(wwwroot)
+          git rm -r .. !wwwroot
           git add bin/Debug/net5.0/wwwroot
           git mv bin/Debug/net5.0/wwwroot/* ../*
           git add wwwroot
