--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,7 +17,7 @@ jobs:
           git config user.name "Website Bot"
           git config user.email "no-reply@lotes-lab.de"
           git checkout -b website
-          git add bin/Debug/net5.0/wwwroot
+          git add -f bin/Debug/net5.0/wwwroot
           git mv bin/Debug/net5.0/wwwroot/* ../*
           git mv wwwroot/* ../*
           git commit -am "Update website"
