--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,8 +17,8 @@ jobs:
           git config user.name "Website Bot"
           git config user.email "no-reply@lotes-lab.de"
           git checkout -b website
-          git add -f bin/Debug/net5.0/wwwroot
-          git mv bin/Debug/net5.0/wwwroot/* ../*
+          mv bin/Debug/net5.0/wwwroot/* ../*
+          git add --all
           git mv wwwroot/* ../*
           git commit -am "Update website"
           git push --force origin website
