--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,11 +17,11 @@ jobs:
           git config user.name "Website Bot"
           git config user.email "no-reply@lotes-lab.de"
           git checkout -b website
-          mv bin/Debug/net5.0/wwwroot/* ..
+          mv bin/Debug/net5.0/* ..
+          mv ../wwwroot/* ..
           mv wwwroot/* ..
           git add --all
           git commit -am "Update website"
           git push --force origin website
-          tree bin
       
           
